add more graph -dfs- related code

--- a/graphs_dfs.ipynb
+++ b/graphs_dfs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "555feaee",
+   "id": "0056aa13",
    "metadata": {},
    "source": [
     "# Graphs - DFS"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9f46a8d",
+   "id": "decfcfbc",
    "metadata": {},
    "source": [
     "## 1) Keys and Rooms\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eea6c5a6",
+   "id": "59f6fd85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "9a3b50cb",
+   "id": "66a4c46e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ec216f74",
+   "id": "74116e81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "d020d081",
+   "id": "12614eb2",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6ce4bc80",
+   "id": "31fe12c0",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "595be148",
+   "id": "ff1f6ed6",
    "metadata": {},
    "source": [
     "## 2) Number of Provinces\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "765325bc",
+   "id": "42c9f7a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "4e3ad695",
+   "id": "1ff0f75d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "e5439e42",
+   "id": "536758fa",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "c15132db",
+   "id": "e7654736",
    "metadata": {},
    "outputs": [
     {
@@ -249,9 +249,200 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "12e80cf8",
+   "metadata": {},
+   "source": [
+    "## 3) Reorder Routes to Make All Paths Lead to the City Zero\n",
+    "\n",
+    "There are n cities numbered from 0 to n - 1 and n - 1 roads such that there is only one way to travel between two different cities (this network form a tree). Last year, The ministry of transport decided to orient the roads in one direction because they are too narrow.\n",
+    "\n",
+    "Roads are represented by connections where connections[i] = [ai, bi] represents a road from city ai to city bi.\n",
+    "\n",
+    "This year, there will be a big event in the capital (city 0), and many people want to travel to this city.\n",
+    "\n",
+    "Your task consists of reorienting some roads such that each city can visit the city 0. Return the minimum number of edges changed.\n",
+    "\n",
+    "It's guaranteed that each city can reach city 0 after reorder.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: n = 6, connections = [[0, 1], [1, 3], [2, 3], [4, 0], [4, 5]] <br />\n",
+    "Output: 3\n",
+    "\n",
+    "Explanation: Change the direction of edges show in red such that each node can reach the node 0 (capital).\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: n = 5, connections = [[1, 0], [1, 2], [3, 2], [3, 4]] <br />\n",
+    "Output: 2\n",
+    "\n",
+    "Explanation: Change the direction of edges show in red such that each node can reach the node 0 (capital).\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: n = 3, connections = [[1, 0], [2, 0]] <br />\n",
+    "Output: 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8e273303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "259182f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minReorder(n: int, connections: List[List[int]]) -> int:\n",
+    "\n",
+    "    count = 0\n",
+    "    visited = set()\n",
+    "    stack = []\n",
+    "    \n",
+    "    for connection in connections:\n",
+    "        if 0 in connection:\n",
+    "            visited.add(tuple(connection))\n",
+    "            if connection[0] == 0:\n",
+    "                stack.append((connection[1], connection[0]))\n",
+    "                count += 1\n",
+    "            else:\n",
+    "                stack.append(connection)\n",
+    "    \n",
+    "    while stack:\n",
+    "        a, _ = stack.pop()\n",
+    "        for connection in connections:\n",
+    "            if tuple(connection) not in visited:\n",
+    "                if a in connection:\n",
+    "                    visited.add(tuple(connection))\n",
+    "                    if connection[0] == a:\n",
+    "                        stack.append((connection[1], connection[0]))\n",
+    "                        count += 1\n",
+    "                    else:\n",
+    "                        stack.append(connection)\n",
+    "            \n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "e3fd588c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "2cb4349f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faster Recursive Solution\n",
+    "\n",
+    "def minReorder(n: int, connections: List[List[int]]) -> int:\n",
+    "    \n",
+    "    def dfs(adj: List[List[Tuple[int, int]]], visited: List[bool], minChange: List[int], currCity: int) -> None:\n",
+    "        visited[currCity] = True\n",
+    "        for neighbourCity in adj[currCity]:\n",
+    "            if not visited[neighbourCity[0]]:\n",
+    "                if neighbourCity[1] == 1:\n",
+    "                    minChange[0] += 1\n",
+    "                dfs(adj, visited, minChange, neighbourCity[0])\n",
+    "\n",
+    "    adj = [[] for _ in range(n)]\n",
+    "    for connection in connections:\n",
+    "        adj[connection[0]].append((connection[1], 1))\n",
+    "        adj[connection[1]].append((connection[0], -1))\n",
+    "    \n",
+    "    visited = [False] * n\n",
+    "    minChange = [0]\n",
+    "    dfs(adj, visited, minChange, 0)\n",
+    "\n",
+    "    return minChange[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "072849d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connections = [[0, 1], [1, 3], [2, 3], [4, 0], [4, 5]]\n",
+    "minReorder(6, connections)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "5c25b593",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connections = [[1, 0], [1, 2], [3, 2], [3, 4]]\n",
+    "minReorder(5, connections)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "e933bb6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connections = [[1, 0], [2, 0]]\n",
+    "minReorder(3, connections)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46264854",
+   "id": "0442e902",
    "metadata": {},
    "outputs": [],
    "source": []
