--- a/graphs_dfs.ipynb
+++ b/graphs_dfs.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "id": "66a4c46e",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "id": "74116e81",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "12614eb2",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "True"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "id": "31fe12c0",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "False"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "id": "42c9f7a8",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "id": "1ff0f75d",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "id": "536758fa",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "2"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "id": "e7654736",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
        "3"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,8 +287,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8e273303",
+   "execution_count": 10,
+   "id": "fc1ca811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "259182f5",
    "metadata": {},
    "outputs": [],
@@ -334,8 +334,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "e3fd588c",
+   "execution_count": 12,
+   "id": "afb2032c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,8 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "2cb4349f",
+   "execution_count": 13,
+   "id": "418dd922",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "id": "072849d2",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
        "3"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "id": "5c25b593",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
        "2"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,8 +419,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "e933bb6e",
+   "execution_count": 16,
+   "id": "053a6d40",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,9 +440,219 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "95929d60",
+   "metadata": {},
+   "source": [
+    "## 4) Evaluate Division\n",
+    "\n",
+    "You are given an array of variable pairs equations and an array of real numbers values, where equations[i] = [Ai, Bi] and values[i] represent the equation Ai / Bi = values[i]. Each Ai or Bi is a string that represents a single variable.\n",
+    "\n",
+    "You are also given some queries, where queries[j] = [Cj, Dj] represents the jth query where you must find the answer for Cj / Dj = ?.\n",
+    "\n",
+    "Return the answers to all queries. If a single answer cannot be determined, return -1.0.\n",
+    "\n",
+    "Note: The input is always valid. You may assume that evaluating the queries will not result in division by zero and that there is no contradiction.\n",
+    "\n",
+    "Note: The variables that do not occur in the list of equations are undefined, so the answer cannot be determined for them.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: equations = [[\"a\", \"b\"],[\"b\", \"c\"]], values = [2.0, 3.0], queries = [[\"a\", \"c\"], [\"b\", \"a\"], [\"a\", \"e\"], [\"a\", \"a\"], [\"x\", \"x\"]] <br />\n",
+    "Output: [6.00000, 0.50000, -1.00000, 1.00000, -1.00000]\n",
+    "\n",
+    "Explanation:\n",
+    "Given: a / b = 2.0, b / c = 3.0 <br />\n",
+    "queries are: a / c = ?, b / a = ?, a / e = ?, a / a = ?, x / x = ? <br />\n",
+    "return: [6.0, 0.5, -1.0, 1.0, -1.0 ] <br />\n",
+    "note: x is undefined => -1.0\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: equations = [[\"a\", \"b\"],[\"b\", \"c\"],[\"bc\", \"cd\"]], values = [1.5, 2.5, 5.0], queries = [[\"a\", \"c\"],[\"c\", \"b\"],[\"bc\", \"cd\"],[\"cd\", \"bc\"]] <br />\n",
+    "Output: [3.75000, 0.40000, 5.00000, 0.20000]\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: equations = [[\"a\", \"b\"]], values = [0.5], queries = [[\"a\", \"b\"], [\"b\", \"a\"], [\"a\", \"c\"], [\"x\", \"y\"]] <br />\n",
+    "Output: [0.50000, 2.00000, -1.00000, -1.00000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "17136ac3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "from typing import Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "e49a09fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcEquation(equations: List[List[str]], values: List[float], queries: List[List[str]]) -> List[float]:\n",
+    "    \n",
+    "    graph = defaultdict(defaultdict)\n",
+    "    \n",
+    "    def dfs_evaluate(curr_node: str, target_node: str, acc_product: float, visited: Set) -> float:\n",
+    "        visited.add(curr_node)\n",
+    "        res = -1.0\n",
+    "        neighbors = graph[curr_node]\n",
+    "        if target_node in neighbors:\n",
+    "            res = acc_product * neighbors[target_node]\n",
+    "        else:\n",
+    "            for neighbor, value in neighbors.items():\n",
+    "                if neighbor in visited:\n",
+    "                    continue\n",
+    "                res = dfs_evaluate(neighbor, target_node, acc_product * value, visited)\n",
+    "                if res != -1.0:\n",
+    "                    break\n",
+    "        \n",
+    "        visited.remove(curr_node)\n",
+    "        return res\n",
+    "    \n",
+    "    for (dividend, divisor), value in zip(equations, values):\n",
+    "        graph[dividend][divisor] = value\n",
+    "        graph[divisor][dividend] = 1 / value\n",
+    "    \n",
+    "    results = []\n",
+    "    for dividend, divisor in queries:\n",
+    "        if dividend not in graph or divisor not in graph:\n",
+    "            res = -1.0\n",
+    "        elif dividend == divisor:\n",
+    "            res = 1.0\n",
+    "        else:\n",
+    "            visited = set()\n",
+    "            res = dfs_evaluate(dividend, divisor, 1, visited)\n",
+    "        results.append(res)\n",
+    "    \n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "8276d3a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Same Solution (a little bit more readable)\n",
+    "\n",
+    "def calcEquation(equations: List[List[str]], values: List[float], queries: List[List[str]]) -> List[float]:\n",
+    "    # Construct graph\n",
+    "    n = len(equations)\n",
+    "    graph = defaultdict(defaultdict)\n",
+    "    \n",
+    "    for idx, (src, dest) in enumerate(equations):\n",
+    "        graph[src][dest] = values[idx]\n",
+    "        graph[dest][src] = 1 / values[idx]\n",
+    "        \n",
+    "    # DFS to process the result of queries\n",
+    "    def dfs(src, dest, res):\n",
+    "        if src not in graph or dest not in graph or src in visited:\n",
+    "            return -1.0\n",
+    "        elif src == dest:\n",
+    "            return res\n",
+    "        \n",
+    "        visited.add(src)\n",
+    "        for nei, val in graph[src].items():\n",
+    "            temp = dfs(nei, dest, res * val)\n",
+    "            if temp != -1:\n",
+    "                return temp\n",
+    "        return -1.0\n",
+    "        \n",
+    "    # Traverse over the queries and store the processed queries in result list\n",
+    "    result = []\n",
+    "    for src, dest in queries:\n",
+    "        visited = set()\n",
+    "        val = dfs(src, dest, 1.0)\n",
+    "        result.append(val)\n",
+    "    \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "c19f2941",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6.0, 0.5, -1.0, 1.0, -1.0]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "equations = [[\"a\", \"b\"], [\"b\", \"c\"]]\n",
+    "values = [2.0, 3.0]\n",
+    "queries = [[\"a\", \"c\"], [\"b\", \"a\"], [\"a\", \"e\"], [\"a\", \"a\"], [\"x\", \"x\"]]\n",
+    "calcEquation(equations, values, queries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "e5856deb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3.75, 0.4, 5.0, 0.2]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "equations = [[\"a\", \"b\"], [\"b\", \"c\"], [\"bc\", \"cd\"]]\n",
+    "values = [1.5, 2.5, 5.0]\n",
+    "queries = [[\"a\", \"c\"], [\"c\", \"b\"], [\"bc\", \"cd\"], [\"cd\", \"bc\"]]\n",
+    "calcEquation(equations, values, queries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f386de81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.5, 2.0, -1.0, -1.0]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "equations = [[\"a\", \"b\"]]\n",
+    "values = [0.5]\n",
+    "queries = [[\"a\", \"b\"], [\"b\", \"a\"], [\"a\", \"c\"], [\"x\", \"y\"]]\n",
+    "calcEquation(equations, values, queries)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0442e902",
+   "id": "19a67037",
    "metadata": {},
    "outputs": [],
    "source": []
