--- a/graphs_bfs.ipynb
+++ b/graphs_bfs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a13874cf",
+   "id": "5ef7bbd4",
    "metadata": {},
    "source": [
     "# Graph - BFS"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d25f55f",
+   "id": "31a5f6d2",
    "metadata": {},
    "source": [
     "## 1) Nearest Exit from Entrance in Maze\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "9f66deb6",
+   "id": "a133a3d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "0a1aaf17",
+   "id": "7e89b9a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "d121cda8",
+   "id": "151680ff",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "8312f6f5",
+   "id": "125ba9f6",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "e3dc4a67",
+   "id": "8933a408",
    "metadata": {},
    "outputs": [
     {
@@ -172,9 +172,178 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d277d02",
+   "metadata": {},
+   "source": [
+    "## 2) Rotting Oranges\n",
+    "\n",
+    "You are given an m x n grid where each cell can have one of three values:\n",
+    "\n",
+    "* 0 representing an empty cell,\n",
+    "* 1 representing a fresh orange, or\n",
+    "* 2 representing a rotten orange.\n",
+    "\n",
+    "Every minute, any fresh orange that is 4-directionally adjacent to a rotten orange becomes rotten.\n",
+    "\n",
+    "Return the minimum number of minutes that must elapse until no cell has a fresh orange. If this is impossible, return -1.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: grid = [[2, 1, 1], [1, 1, 0], [0, 1, 1]] <br />\n",
+    "Output: 4\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: grid = [[2, 1, 1], [0, 1, 1], [1, 0, 1]] <br />\n",
+    "Output: -1\n",
+    "\n",
+    "Explanation: The orange in the bottom left corner (row 2, column 0) is never rotten, because rotting only happens 4-directionally.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: grid = [[0, 2]] <br />\n",
+    "Output: 0\n",
+    "\n",
+    "Explanation: Since there are already no fresh oranges at minute 0, the answer is just 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "f9e3129a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def orangesRotting(grid: List[List[int]]) -> int:\n",
+    "    \n",
+    "    queue = []\n",
+    "    \n",
+    "    rows, cols = len(grid), len(grid[0])\n",
+    "    dirs = ((1, 0), (-1, 0), (0, 1), (0, -1)) \n",
+    "    \n",
+    "    fresh_oranges = 0\n",
+    "    for r in range(rows):\n",
+    "        for c in range(cols):\n",
+    "            if grid[r][c] == 2:\n",
+    "                queue.append([r, c])\n",
+    "            elif grid[r][c] == 1:\n",
+    "                fresh_oranges += 1\n",
+    "    \n",
+    "    queue.append([-1, -1])\n",
+    "    \n",
+    "    minutes_elapsed = 0\n",
+    "    while queue:\n",
+    "        curr_row, curr_col = queue.pop(0)\n",
+    "        if curr_row == -1:\n",
+    "            minutes_elapsed += 1\n",
+    "            if queue:  # to avoid the endless loop\n",
+    "                queue.append((-1, -1))\n",
+    "        else:\n",
+    "            for d in dirs:\n",
+    "                next_row = curr_row + d[0]\n",
+    "                next_col = curr_col + d[1]\n",
+    "\n",
+    "                if 0 <= next_row < rows and 0 <= next_col < cols and grid[next_row][next_col] == 1:\n",
+    "                    grid[next_row][next_col] = 2\n",
+    "                    fresh_oranges -= 1\n",
+    "                    queue.append([next_row, next_col])\n",
+    "    \n",
+    "    return minutes_elapsed - 1 if fresh_oranges == 0 else -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "1dcfc0fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [[2, 1, 1], [1, 1, 0], [0, 1, 1]]\n",
+    "orangesRotting(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "fcdb4e47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [[2, 1, 1], [0, 1, 1], [1, 0, 1]]\n",
+    "orangesRotting(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "c6097d15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [[0, 2]] \n",
+    "orangesRotting(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "fa277e94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [[0]]\n",
+    "orangesRotting(grid)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79854c4a",
+   "id": "10297bc0",
    "metadata": {},
    "outputs": [],
    "source": []
