add heap related code

--- a/heaps.ipynb
+++ b/heaps.ipynb
@@ -202,7 +202,7 @@
    "id": "abcdffbb",
    "metadata": {},
    "source": [
-    "## Largest Triple Products\n",
+    "## 1) Largest Triple Products\n",
     "\n",
     "You're given a list of n integers arr[0..(n-1)]. You must compute a list output[0..(n-1)] such that, for each index i (between 0 and n-1, inclusive), output[i] is equal to the product of the three largest elements out of arr[0..i] (or equal to -1 if i < 2, as arr[0..i] then includes fewer than three elements).\n",
     "\n",
@@ -329,7 +329,7 @@
    "id": "e667c804",
    "metadata": {},
    "source": [
-    "## Magical Candy Bags\n",
+    "## 2) Magical Candy Bags\n",
     "\n",
     "You have N bags of candy. The ith bag contains arr[i] pieces of candy, and each of the bags is magical!\n",
     "\n",
@@ -447,7 +447,7 @@
    "id": "b0ee3d51",
    "metadata": {},
    "source": [
-    "## Median Stream\n",
+    "## 3) Median Stream\n",
     "\n",
     "You're given a list of n integers arr[0..(n-1)]. You must compute a list output[0..(n-1)] such that, for each index i (between 0 and n-1, inclusive), output[i] is equal to the median of the elements arr[0..i] (rounded down to the nearest integer).\n",
     "\n",
@@ -545,9 +545,281 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d823117",
+   "metadata": {},
+   "source": [
+    "## 4) Kth Largest Element in an Array\n",
+    "\n",
+    "Given an integer array nums and an integer k, return the kth largest element in the array.\n",
+    "\n",
+    "Note that it is the kth largest element in the sorted order, not the kth distinct element.\n",
+    "\n",
+    "Can you solve it without sorting?\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: nums = [3, 2, 1, 5, 6, 4], k = 2 <br />\n",
+    "Output: 5\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: nums = [3, 2, 3, 1, 2, 4, 5, 5, 6], k = 4 <br />\n",
+    "Output: 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f37edcca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from heapq import heapify, heappush, heappop\n",
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "090bbb64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findKthLargest(nums: List[int], k: int) -> int:\n",
+    "    \n",
+    "    heap = []\n",
+    "    for num in nums:\n",
+    "        heappush(heap, num)\n",
+    "    \n",
+    "    return heapq.nlargest(k, heap)[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "dbc67049",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A Little Bit Faster Solution\n",
+    "\n",
+    "def findKthLargest(nums: List[int], k: int) -> int:\n",
+    "    \n",
+    "    heapify(nums)\n",
+    "    return heapq.nlargest(k, nums)[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "8ace8d71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faster Solution (Without Sorting)\n",
+    "\n",
+    "def findKthLargest(nums: List[int], k: int) -> int:\n",
+    "    \n",
+    "    heap = []\n",
+    "    for num in nums:\n",
+    "        heapq.heappush(heap, num)\n",
+    "        if len(heap) > k:\n",
+    "            heapq.heappop(heap)\n",
+    "        \n",
+    "    return heap[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "bed51066",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [3, 2, 1, 5, 6, 4]\n",
+    "k = 2\n",
+    "findKthLargest(nums, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "62e5b4cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [3, 2, 3, 1, 2, 4, 5, 5, 6]\n",
+    "k = 4\n",
+    "findKthLargest(nums, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57fd199e",
+   "metadata": {},
+   "source": [
+    "## 5) Smallest Number in Infinite Set\n",
+    "\n",
+    "You have a set which contains all positive integers [1, 2, 3, 4, 5, ...].\n",
+    "\n",
+    "Implement the SmallestInfiniteSet class:\n",
+    "\n",
+    "* SmallestInfiniteSet() Initializes the SmallestInfiniteSet object to contain all positive integers.\n",
+    "* int popSmallest() Removes and returns the smallest integer contained in the infinite set.\n",
+    "* void addBack(int num) Adds a positive integer num back into the infinite set, if it is not already in the infinite set.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: <br />\n",
+    "[\"SmallestInfiniteSet\", \"addBack\", \"popSmallest\", \"popSmallest\", \"popSmallest\", \"addBack\", \"popSmallest\", \"popSmallest\", \"popSmallest\"] <br />\n",
+    "[[], [2], [], [], [], [1], [], [], []]\n",
+    "\n",
+    "Output: <br />\n",
+    "[null, null, 1, 2, 3, null, 1, 4, 5]\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "SmallestInfiniteSet smallestInfiniteSet = new SmallestInfiniteSet(); <br />\n",
+    "smallestInfiniteSet.addBack(2);    // 2 is already in the set, so no change is made. <br />\n",
+    "smallestInfiniteSet.popSmallest(); // return 1, since 1 is the smallest number, and remove it from the set. <br />\n",
+    "smallestInfiniteSet.popSmallest(); // return 2, and remove it from the set. <br />\n",
+    "smallestInfiniteSet.popSmallest(); // return 3, and remove it from the set. <br />\n",
+    "smallestInfiniteSet.addBack(1);    // 1 is added back to the set. <br />\n",
+    "smallestInfiniteSet.popSmallest(); // return 1, since 1 was added back to the set and <br />\n",
+    "                                   // is the smallest number, and remove it from the set. <br />\n",
+    "smallestInfiniteSet.popSmallest(); // return 4, and remove it from the set. <br />\n",
+    "smallestInfiniteSet.popSmallest(); // return 5, and remove it from the set. <br />"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "8be04ba8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from heapq import heapify, heappush, heappop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "053616b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prototype\n",
+    "\n",
+    "class SmallestInfiniteSet:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.heap = [i for i in range(1, 1001)]\n",
+    "\n",
+    "    def popSmallest(self) -> int:\n",
+    "        if self.heap:\n",
+    "            heapify(self.heap)\n",
+    "            return heappop(self.heap)\n",
+    "        else:\n",
+    "            return\n",
+    "\n",
+    "    def addBack(self, num: int) -> None:\n",
+    "        if num not in self.heap:\n",
+    "            heappush(self.heap, num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "c9316243",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SmallestInfiniteSet:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.is_present: {int} = set()\n",
+    "        self.added_integers: [int] = []\n",
+    "        self.current_integer = 1\n",
+    "\n",
+    "    def popSmallest(self) -> int:\n",
+    "        # If there are numbers in the min-heap, \n",
+    "        # top element is lowest among all the available numbers.\n",
+    "        if len(self.added_integers):\n",
+    "            answer = heappop(self.added_integers)\n",
+    "            self.is_present.remove(answer)\n",
+    "        # Otherwise, the smallest number of large positive set \n",
+    "        # denoted by 'current_integer' is the answer.\n",
+    "        else:\n",
+    "            answer = self.current_integer\n",
+    "            self.current_integer += 1\n",
+    "        return answer\n",
+    "\n",
+    "    def addBack(self, num: int) -> None:\n",
+    "        if self.current_integer <= num or num in self.is_present:\n",
+    "            return\n",
+    "        # We push 'num' in the min-heap if it isn't already present.\n",
+    "        heappush(self.added_integers, num)\n",
+    "        self.is_present.add(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "c0003982",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "1\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "smallestInfiniteSet = SmallestInfiniteSet()\n",
+    "smallestInfiniteSet.addBack(2)\n",
+    "print(smallestInfiniteSet.popSmallest())\n",
+    "print(smallestInfiniteSet.popSmallest())\n",
+    "print(smallestInfiniteSet.popSmallest())\n",
+    "smallestInfiniteSet.addBack(1)\n",
+    "print(smallestInfiniteSet.popSmallest())\n",
+    "print(smallestInfiniteSet.popSmallest())\n",
+    "print(smallestInfiniteSet.popSmallest())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaebc5e3",
+   "id": "7a58b962",
    "metadata": {},
    "outputs": [],
    "source": []
