add more heap related code

--- a/heaps.ipynb
+++ b/heaps.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "7f66c26c",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "5fc38bbe",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "bb90d61e",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "24c572ba",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "[-1, -1, 6, 24, 60]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "86107674",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
        "[-1, -1, 56, 56, 140, 140]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "9f1052e9",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
        "[-1, -1, 4, 4, 8]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f3f18bb8",
    "metadata": {},
    "outputs": [],
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "id": "503c657d",
    "metadata": {},
    "outputs": [],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "id": "0f615ab0",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "14"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "id": "175ea875",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
        "228"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "id": "874f6f1f",
    "metadata": {},
    "outputs": [],
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "id": "ccdc20e6",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
        "[5, 10, 5, 4]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "id": "81f18589",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
        "[2, 3, 4, 3, 4, 3]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d823117",
+   "id": "3c5a7bec",
    "metadata": {},
    "source": [
     "## 4) Kth Largest Element in an Array\n",
@@ -570,8 +570,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f37edcca",
+   "execution_count": 18,
+   "id": "11b3cc18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,8 +581,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "090bbb64",
+   "execution_count": 19,
+   "id": "5eafd250",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,8 +597,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "dbc67049",
+   "execution_count": 20,
+   "id": "7d5879ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,8 +612,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "8ace8d71",
+   "execution_count": 21,
+   "id": "5d340fea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "bed51066",
+   "execution_count": 22,
+   "id": "d51c9a0c",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "5"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,8 +655,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "62e5b4cc",
+   "execution_count": 23,
+   "id": "baab1dcf",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "4"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57fd199e",
+   "id": "8f43e170",
    "metadata": {},
    "source": [
     "## 5) Smallest Number in Infinite Set\n",
@@ -716,8 +716,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "8be04ba8",
+   "execution_count": 24,
+   "id": "415df4db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,8 +726,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "053616b5",
+   "execution_count": 25,
+   "id": "ca390fec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,8 +752,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "c9316243",
+   "execution_count": 26,
+   "id": "f6045cf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,8 +787,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "c0003982",
+   "execution_count": 27,
+   "id": "df429d2d",
    "metadata": {},
    "outputs": [
     {
@@ -817,9 +817,403 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2cf28674",
+   "metadata": {},
+   "source": [
+    "## 6) Maximum Subsequence Score\n",
+    "\n",
+    "You are given two 0-indexed integer arrays nums1 and nums2 of equal length n and a positive integer k. You must choose a subsequence of indices from nums1 of length k.\n",
+    "\n",
+    "For chosen indices i0, i1, ..., ik - 1, your score is defined as:\n",
+    "\n",
+    "* The sum of the selected elements from nums1 multiplied with the minimum of the selected elements from nums2.\n",
+    "* It can defined simply as: (nums1[i0] + nums1[i1] +...+ nums1[ik - 1]) * min(nums2[i0] , nums2[i1], ... ,nums2[ik - 1]).\n",
+    "\n",
+    "Return the maximum possible score.\n",
+    "\n",
+    "A subsequence of indices of an array is a set that can be derived from the set {0, 1, ..., n-1} by deleting some or no elements.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: nums1 = [1,3,3,2], nums2 = [2,1,3,4], k = 3 <br />\n",
+    "Output: 12\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "The four possible subsequence scores are:\n",
+    "\n",
+    "- We choose the indices 0, 1, and 2 with score = (1+3+3) * min(2,1,3) = 7.\n",
+    "- We choose the indices 0, 1, and 3 with score = (1+3+2) * min(2,1,4) = 6. \n",
+    "- We choose the indices 0, 2, and 3 with score = (1+3+2) * min(2,3,4) = 12. \n",
+    "- We choose the indices 1, 2, and 3 with score = (3+3+2) * min(1,3,4) = 8.\n",
+    "\n",
+    "Therefore, we return the max score, which is 12.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: nums1 = [4,2,3,1,1], nums2 = [7,5,10,9,6], k = 1 <br />\n",
+    "Output: 30 <br />\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "Choosing index 2 is optimal: nums1[2] * nums2[2] = 3 * 10 = 30 is the maximum possible score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0a6c43ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from heapq import heapify, heappush, heappop\n",
+    "from typing import List\n",
+    "from itertools import combinations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1b1f321c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution without Heap\n",
+    "\n",
+    "def maxScore(nums1: List[int], nums2: List[int], k: int) -> int:\n",
+    "    \n",
+    "    comb = combinations(enumerate(nums1), k)\n",
+    "    max_score = float('-inf')\n",
+    "    for c in comb:\n",
+    "        sum_sub1 = sum(n for _, n in c)\n",
+    "        min_sub2 = float('inf')\n",
+    "        for i, _ in c:\n",
+    "            min_sub2 = min(min_sub2, nums2[i])\n",
+    "        max_score = max(max_score, sum_sub1 * min_sub2)\n",
+    "    \n",
+    "    return max_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ebbf9784",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faster Solution\n",
+    "\n",
+    "def maxScore(nums1: List[int], nums2: List[int], k: int) -> int:\n",
+    "    \n",
+    "    # Sort pair (nums1[i], nums2[i]) by nums2[i] in decreasing order.\n",
+    "    pairs = [(a, b) for a, b in zip(nums1, nums2)]\n",
+    "    pairs.sort(key = lambda x: -x[1])\n",
+    "    \n",
+    "    # Use a min-heap to maintain the top k elements.\n",
+    "    top_k_heap = [x[0] for x in pairs[:k]]\n",
+    "    top_k_sum = sum(top_k_heap)\n",
+    "    heapify(top_k_heap)\n",
+    "    \n",
+    "    # The score of the first k pairs.\n",
+    "    answer = top_k_sum * pairs[k - 1][1]\n",
+    "    \n",
+    "    # Iterate over every nums2[i] as minimum from nums2.\n",
+    "    for i in range(k, len(nums1)):\n",
+    "        # Remove the smallest integer from the previous top k elements\n",
+    "        # then add nums1[i] to the top k elements.\n",
+    "        top_k_sum -= heappop(top_k_heap)\n",
+    "        top_k_sum += pairs[i][0]\n",
+    "        heappush(top_k_heap, pairs[i][0])\n",
+    "        \n",
+    "        # Update answer as the maximum score.\n",
+    "        answer = max(answer, top_k_sum * pairs[i][1])\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "968ea3c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from operator import itemgetter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a68bc4c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faster and More Readable Solution\n",
+    "\n",
+    "def maxScore(nums1: List[int], nums2: List[int], k: int) -> int:\n",
+    "\n",
+    "    answer = 0\n",
+    "    prefix_sum = 0\n",
+    "    min_heap = []\n",
+    "    \n",
+    "    pairs = sorted(list(zip(nums1, nums2)), key = itemgetter(1), reverse = True)\n",
+    "    \n",
+    "    for n1, n2 in pairs:\n",
+    "        prefix_sum += n1\n",
+    "        heappush(min_heap, n1)\n",
+    "        if len(min_heap) == k:\n",
+    "            answer = max(answer, prefix_sum * n2)\n",
+    "            prefix_sum -= heappop(min_heap)                               \n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "608b15e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums1 = [1, 3, 3, 2]\n",
+    "nums2 = [2, 1, 3, 4]\n",
+    "k = 3\n",
+    "maxScore(nums1, nums2, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "8426a6c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums1 = [4, 2, 3, 1, 1]\n",
+    "nums2 = [7, 5, 10, 9, 6]\n",
+    "k = 1\n",
+    "maxScore(nums1, nums2, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "7832883e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, 10), (1, 9), (4, 7), (1, 6), (2, 5)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums1 = [4, 2, 3, 1, 1]\n",
+    "nums2 = [7, 5, 10, 9, 6]\n",
+    "sorted(list(zip(nums1, nums2)), key=itemgetter(1), reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "162507e4",
+   "metadata": {},
+   "source": [
+    "## 7) Total Cost to Hire K Workers\n",
+    "\n",
+    "You are given a 0-indexed integer array costs where costs[i] is the cost of hiring the ith worker.\n",
+    "\n",
+    "You are also given two integers k and candidates. We want to hire exactly k workers according to the following rules:\n",
+    "\n",
+    "* You will run k sessions and hire exactly one worker in each session.\n",
+    "* In each hiring session, choose the worker with the lowest cost from either the first candidates workers or the last candidates workers. Break the tie by the smallest index.\n",
+    "* For example, if costs = [3, 2, 7, 7, 1, 2] and candidates = 2, then in the first hiring session, we will choose the 4th worker because they have the lowest cost [3, 2, 7, 7, 1, 2].\n",
+    "* In the second hiring session, we will choose 1st worker because they have the same lowest cost as 4th worker but they have the smallest index [3, 2, 7, 7, 2]. Please note that the indexing may be changed in the process.\n",
+    "* If there are fewer than candidates workers remaining, choose the worker with the lowest cost among them. Break the tie by the smallest index.\n",
+    "* A worker can only be chosen once.\n",
+    "\n",
+    "Return the total cost to hire exactly k workers.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: costs = [17, 12, 10, 2, 7, 2, 11, 20, 8], k = 3, candidates = 4 <br />\n",
+    "Output: 11\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "We hire 3 workers in total. The total cost is initially 0.\n",
+    "- In the first hiring round we choose the worker from [17, 12, 10, 2, 7, 2, 11, 20, 8]. The lowest cost is 2, and we break the tie by the smallest index, which is 3. The total cost = 0 + 2 = 2.\n",
+    "- In the second hiring round we choose the worker from [17, 12, 10, 7, 2, 11, 20, 8]. The lowest cost is 2 (index 4). The total cost = 2 + 2 = 4.\n",
+    "- In the third hiring round we choose the worker from [17, 12, 10, 7, 11, 20, 8]. The lowest cost is 7 (index 3). The total cost = 4 + 7 = 11. Notice that the worker with index 3 was common in the first and last four workers.\n",
+    "\n",
+    "The total hiring cost is 11.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: costs = [1, 2, 4, 1], k = 3, candidates = 3 <br />\n",
+    "Output: 4\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "We hire 3 workers in total. The total cost is initially 0.\n",
+    "- In the first hiring round we choose the worker from [1, 2, 4, 1]. The lowest cost is 1, and we break the tie by the smallest index, which is 0. The total cost = 0 + 1 = 1. Notice that workers with index 1 and 2 are common in the first and last 3 workers.\n",
+    "- In the second hiring round we choose the worker from [2, 4, 1]. The lowest cost is 1 (index 2). The total cost = 1 + 1 = 2.\n",
+    "- In the third hiring round there are less than three candidates. We choose the worker from the remaining workers [2, 4]. The lowest cost is 2 (index 0). The total cost = 2 + 2 = 4.\n",
+    "\n",
+    "The total hiring cost is 4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "fadb88f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from heapq import heapify, heappush, heappop\n",
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "9c943e09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def totalCost(costs: List[int], k: int, candidates: int) -> int:\n",
+    "    \n",
+    "    answer = 0\n",
+    "    \n",
+    "    i = 1\n",
+    "    while i <= k and len(costs) > 0:\n",
+    "        candidates = min(candidates, len(costs))\n",
+    "\n",
+    "        if min(costs[:candidates]) <= min(costs[-candidates:]):\n",
+    "            answer += costs.pop((costs.index(min(costs[:candidates]))))\n",
+    "        else:\n",
+    "            answer += costs.pop((costs.index(min(costs[-candidates:]))))\n",
+    "        i += 1\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "b81560dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def totalCost(costs: List[int], k: int, candidates: int) -> int:\n",
+    "    \n",
+    "        # head_workers stores the first k workers.\n",
+    "    # tail_workers stores at most last k workers without any workers from the first k workers. \n",
+    "    head_workers = costs[:candidates]\n",
+    "    tail_workers = costs[max(candidates, len(costs) - candidates):]\n",
+    "    heapify(head_workers)\n",
+    "    heapify(tail_workers)\n",
+    "    \n",
+    "    answer = 0\n",
+    "    next_head, next_tail = candidates, len(costs) - 1 - candidates \n",
+    "    \n",
+    "    for _ in range(k): \n",
+    "        if not tail_workers or head_workers and head_workers[0] <= tail_workers[0]: \n",
+    "            answer += heappop(head_workers)\n",
+    "            \n",
+    "            # Only refill the queue if there are workers outside the two queues.\n",
+    "            if next_head <= next_tail: \n",
+    "                heappush(head_workers, costs[next_head])\n",
+    "                next_head += 1\n",
+    "        else: \n",
+    "            answer += heappop(tail_workers)\n",
+    "\n",
+    "            # Only refill the queue if there are workers outside the two queues.\n",
+    "            if next_head <= next_tail:  \n",
+    "                heappush(tail_workers, costs[next_tail])\n",
+    "                next_tail -= 1\n",
+    "                    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f0aa6704",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "costs = [17, 12, 10, 2, 7, 2, 11, 20, 8]\n",
+    "k = 3\n",
+    "candidates = 4\n",
+    "totalCost(costs, k, candidates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "6cd6cc3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "costs = [1, 2, 4, 1]\n",
+    "k = 3\n",
+    "candidates = 3\n",
+    "totalCost(costs, k, candidates)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a58b962",
+   "id": "ebe0f90e",
    "metadata": {},
    "outputs": [],
    "source": []
